--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div class="large-offset-3 large-6 columns">
 				<div id="word">
-					<div id="completed" style="display:inline"></div><div id="incomplete" style="display:inline; color:LightGray">asdf</div>
+					<div id="completed" style="display:inline"></div><div id="incomplete" style="display:inline; color:LightGray"></div>
 				</div>
 			</div>
     </div>
