--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<body>
 		<div class="row">
 			<div class="large-1 columns">
-				<div id="incorrect">0</div>
+				<span id="incorrect">0</span>
+			</div>
+			<div class="large-10-offset large-1 columns">
+				<span id="timer"></span>
 			</div>
 		</div>
     <div class="row">
@@ -29,6 +32,7 @@
     </div>
 		<script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
+		<script src="js/timer.js"></script>
 		<script src="js/sprintz.js"></script>
     <script>
       $(document).foundation();
