--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 		</div>
 		<div class="row">
 			<div class="large-offset-3 large-6 columns">
-				<div id="word">
+				<div data-alert class="alert-box warning round" id="status" style="display:none"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-offset-3 large-6 columns">
+				<div id="word" style="text-align:center">
 					<div id="completed" style="display:inline"></div><div id="incomplete" style="display:inline; color:LightGray"></div>
 				</div>
 			</div>
