--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				</center>
 			</div>
 		</div>
-		<div class="row">
-			<div class="large-offset-3 large-6 columns" style="text-align:center">
+		<div class="row"> <div class="large-offset-3 large-6 columns" style="text-align:center">
 				<div data-alert class="alert-box warning round" id="status" style="display:none"></div>
 				<a class="button [radius round]" id="newGame" onclick="newGame()" style="text-align:center">New Game</a>
+				<div class="panel" id="results" style="display:none"></div>
 			</div>
 		</div>
 		<div class="row">
