--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
 	<body>
-		<div class="row">
+		<div class="row" id="hud">
 			<div class="large-1 columns">
-				<span id="incorrect"></span>
+				<span id="incorrect"> </span>
 			</div>
 			<div class="large-10-offset large-1 columns">
-				<span id="timer"></span>
+				<span id="timer"> </span>
 			</div>
 		</div>
     <div class="row">
