--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
 	<body>
-		<div class="row" id="hud">
-			<div class="large-1 columns">
-				<span id="incorrect"> </span>
-			</div>
-			<div class="large-10-offset large-1 columns">
-				<span id="timer"> </span>
-			</div>
+		<div id="hud">
+			<span id="incorrect"> </span>
+			<span id="timer"> </span>
 		</div>
     <div class="row">
 			<div class="large-12 columns">
