Added padding to hud

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
 	<body>
-		<span id="incorrect"> </span>
-		<span id="timer"> </span>
+		<div id="hud">
+			<span id="incorrect"></span>
+			<span id="timer"></span>
+		</div>
     <div class="row">
 			<div class="large-12 columns">
 				<center>
